<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/games"
            android:icon="@drawable/ic__games"
            android:title="@string/menu_games" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic__search"
            android:title="@string/menu_search" />

    </group>

    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/send"
                android:icon="@drawable/ic_send"
                android:title="@string/menu_send" />
            </group>
        </menu>
    </item>

</menu>